src/test/deca/context/valid/class_sans_method/class_extends_class.deca
// Description:
//    Une classe hérite d'une autre classe
//
// Resultats:
//    Context: pas d'erreur
//
// Historique:
//    cree le 20/01/2022

class A {

}

class B extends A {

}

{

}
